# adbstatus

./: .gitignore  Makefile  README.md  adb-monitor.yml  adb-status-httpd.py  adb_info.py  adb_monitor.py  pyproject.toml  requirements.txt  sleep_monitor.py
adbstatus/: __init__.py  core.py  monitor.py  server.py  service.py  sleep_monitor.py
adbstatus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
etc/: monitor.yml  server.yml
